Take message parameters from body
